--- a/package.json
+++ b/package.json
@@ -8,7 +8,16 @@
   "scripts": {
     "lint": "eslint --ext .js,.ts,.d.ts src/",
     "build": "rimraf dist && rollup -c rollup.config.js --environment NODE_ENV:production",
-    "dev": "rimraf dist && rollup -c rollup.config.js --environment NODE_ENV:development"
+    "dev": "rimraf dist && rollup -c rollup.config.js --environment NODE_ENV:development",
+    "install:local": "pnpm i",
+    "install:main": "cd examples/main && pnpm i",
+    "install:react": "cd examples/react && pnpm i",
+    "install:vue": "cd examples/vue && pnpm i",
+    "install:all": "run-p install:main install:react install:vue install:local",
+    "dev:main": "cd examples/main && pnpm dev",
+    "dev:react": "cd examples/react && pnpm dev",
+    "dev:vue": "cd examples/vue && pnpm dev",
+    "dev:all": "run-p dev:main dev:react dev:vue dev"
   },
   "repository": {
     "type": "git",
@@ -34,7 +43,6 @@
     "@babel/plugin-transform-runtime": "^7.15.0",
     "@babel/preset-env": "^7.16.11",
     "@babel/runtime": "^7.16.7",
-    "@rollup/plugin-babel": "^5.3.0",
     "@rollup/plugin-commonjs": "^21.0.1",
     "@rollup/plugin-json": "^4.1.0",
     "@rollup/plugin-node-resolve": "^13.1.3",
@@ -48,6 +56,7 @@
     "eslint-plugin-import": "^2.22.0",
     "husky": "^4.3.0",
     "lint-staged": "^10.5.4",
+    "npm-run-all": "^4.1.5",
     "rimraf": "^3.0.2",
     "rollup": "^2.64.0",
     "rollup-plugin-typescript2": "^0.31.1",
